# chatbot-rag

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  agent.py  chunking.py  cli.py  config.py  document_loader.py  ollama_client.py  pipeline.py  prompts.py  reranker.py  retrieval.py  session.py  storage.py  tracing.py
data/: eval_set.jsonl
data/docs/: novel.md
docs/: pr2-conflict-resolution.md
scripts/: replay_pr2_on_master.sh
